--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,22 @@ body{
 }
 h1, h2, h3, h4, h5, h6{
     color: black;
-    font-family: var(--heading-font-family)
+    font-family: var(--heading-font-family);
+    line-height: 1.2;
   }
   h1{
     font-size: 96px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 64px;
   }
   
   p {
     font-family: var(--default-font-family);
     font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
   }
   .hero {
     background: var(--secondary-color);
@@ -34,7 +41,7 @@ h1, h2, h3, h4, h5, h6{
     font-family:var(--default-font-family);
     font-weight: normal;
     font-size: 24px;
-    line-height: 2;
+    line-height: 1.5;
   }
   .btn-branding {
     background: var(--branding-color);
@@ -44,4 +51,31 @@ h1, h2, h3, h4, h5, h6{
     line-height: 27px;
     padding: 15px 30px;
   }
-  
+  .btn-branding-outline{
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+    border: 1px solid var(--branding-color);
+    color: var(--branding-color);
+  }
+  .project-description{
+    padding: 120px 60px;
+  }
+  @media (max-width: 900px){
+    h1 {
+        font-size: 44px;
+        line-height: 2;
+    }
+    h2 {
+        margin-top: 37px;
+        font-size: 44px;
+    }
+    .project-description {
+        padding: 0px;
+        text-align: center;
+    }
+    .hero {
+        padding: 80px 20px;
+      }
+  }
