--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,8 @@ h1, h2, h3, h4, h5, h6{
     line-height: 27px;
     padding: 15px 30px;
     border: 1px solid var(--branding-color);
-    color: var(--branding-color);
+    color: white;
+    background: var(--branding-color);
   }
   .project-description{
     padding: 120px 60px;
