--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,13 @@ p {
   margin: 30px;
 }
 .content h3 {
-    font-size: 24px;
-    font-family: var(--default-font-family);
-    line-height: 1,5;
-    margin: 20px 0;
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1, 5;
+  margin: 20px 0;
 }
 .content p {
-    font-size: 14px;
+  font-size: 14px;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -106,10 +106,6 @@ p {
     margin-top: 37px;
     font-size: 44px;
   }
-  .project-description {
-    padding: 0px;
-    text-align: center;
-  }
   .hero {
     padding: 80px 20px;
   }
@@ -117,4 +113,36 @@ p {
     text-align: center;
     padding: 0;
   }
+  .project-description {
+    padding: 0px;
+    text-align: center;
+  }
 }
+
+  .logo {
+    max-height: 40px;
+  }
+  nav {
+    padding: 20px 0;
+  }
+  nav ul {
+    padding: 0;
+    margin: 0;
+  }
+  nav li {
+    display: inline;
+    list-style: none;
+    line-height: 42px;
+    margin-left: 15px;
+  }
+  nav a {
+    text-decoration: none;
+    color: #272142;
+    transition: all 100ms ease-in-out;
+  }
+  nav a:hover,
+  nav li.active a {
+    color: var(--branding-color);
+  }
+  
+
