--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root {
-  --branding-color: #6c63ff;
+  --branding-color: #b23a48;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
-  --secondary-color: #f9f7fe;
+  --secondary-color: #fed0bb;
 }
 body {
   font-family: var(--default-font-family);
@@ -93,11 +93,14 @@ p {
   background: var(--branding-color);
 }
 .project-description {
-  padding: 120px 60px;
+  padding: 60px;
 }
 
 .about-pic {
   border-radius: 10px;
+}
+#weather-project {
+  margin-top: 135px;
 }
 
 footer .email-link {
